syntax = "proto3";

import "google/api/annotations.proto";

package template;

option go_package="project-api/api/user/userProto";

service Demo {
  rpc UserList(UserListReq) returns (UserInfoResp){
    option(google.api.http) = {
      post:"/api/user/v1/list",
      body: "*"
    };
  }
}

message UserInfoResp{
  int64 id = 1; // id describe txt
  string name = 2; // id describe txt
}

//test
message Query {
  int64 id = 1; // id describe txt
  string name = 2; // name describe txt
}

message UserListReq{
  Query query = 1;
  int64 limit = 2; // limit describe txt
  int64 offset = 3; // offset describe txt
}

message UserListResp{
  repeated UserInfoResp items = 1; // UserInfoResp describe txt
}
